2011-04-11
 Support files and revisions with -review in fossil.

2011-04-05
 Added -pluginlist option.
 Added Paste Patch command in Tools.

2011-04-04
 Support list of files with -review.
 Support commit from -review.
 Support commit in Git and Fossil.

Release 2.5

2011-03-31
 Added support for Fossil revision control.

2010-11-07
 Added tkdnd support. [FR 5125]

2010-11-07
 Autodetect line endings in conflict file.
 Allow line ending selection in merge save. [FR 5160]
 Added menu bar to merge window.

2010-06-23
 Support -noempty from DiffUtil, to try it out.

2010-04-27
 Added command line options to control PDF options. [FR 5008]

2010-04-27
 Removed support for Postscript output.

2010-04-27
 Handle an empty .eskilrc. [Bug 17113]
 Moved packages pstools and psballoon into GIT repository.

2010-02-13
 Do git add after conflict merge of a git file.
 Select colors for PDF print.

2009-11-02
 Detect and display annotation in patches. E.g. when using -p with diff.

2009-10-17
 Return in rev field does a redo diff. [FR 4649]
 Allow zero lines of context to only show diffs.

2009-02-12
 Allow stepping down in directory diff.
 Experiment to display less in directory diff.
 Require 8.5. Misc cleanup to use that fact.
 Perforce support. (Elliot)

2009-01-23
 Don't save unchanged preferences to prefs file.
 Better documentation for plugins.
 Added plugin dump.

Release 2.4

2009-01-08
 Added backslash plugin.

2009-01-07
 Better handling of negative Subversion revisions

2008-11-19
 Bug fix in Clip Diff Capture

2008-11-10
 Improved patch parsing.
 Includ Twapi in windows executable

2008-11-06
 Added Capture in Clip Diff on Windows.
 Handle Rev and Plugin at the same time.

2008-09-23
 Added log button for version control.
 Added commit for Subversion.
 Added log view for CVS and Subversion.
 Do not parse GIT revisions.

2008-05-23
 Started on plugins.

2008-04-09
 Added color option for unchanged text.

2008-03-07
 Added -review to do full tree view like a patch.
